--- a/src/App.css
+++ b/src/App.css
@@ -46,34 +46,34 @@
   height: 200px;
   font-size: 60px;
   background-color: black;
-  color: #61dafb;
+  color:white;
 }
 .tech2 {
   background-image: url(./ThirdImage.jpg);
   height: 200px;
   font-size: 60px;
   background-color: black;
-  color: #61dafb;
+  color: white;
 }
 .tech3 {
   background-image: url(./FourthImage.jpg);
   height: 200px;
   font-size: 60px;
   background-color: black;
-  color: #61dafb;
+  color:white;
 }
 .tech4 {
   background-image: url(./FifthImage.jpg);
   height: 200px;
   font-size: 60px;
   background-color: black;
-  color: #61dafb;
+  color:white;
 }
 .tech5 {
   background-image: url(./firstimage.jpg);
   height: 200px;
   font-size: 60px;
   background-color: black;
-  color: #61dafb;
+  color:white;
 }
 
